Solved spacing issues - work section and footer

--- a/src/sass/components/workItem.scss
+++ b/src/sass/components/workItem.scss
@@ -37,17 +37,6 @@
   }
 }
 
-@media screen and (min-width: 80em) {
-  .work__content {
-    max-width: 1280px;
-    margin: 0 auto;
-
-    .work__item {
-      max-width: 100%;
-    }
-  }
-}
-
 // @media (hover: hover) and (pointer: fine) {
 //   .work {
 //     .work__content {
