--- a/src/sass/layout/footer.scss
+++ b/src/sass/layout/footer.scss
@@ -5,6 +5,7 @@ footer {
   align-items: center;
   min-height: 10rem;
   background-color: var(--secondary-bg);
+  margin-top: 1rem;
 
   svg {
     fill: var(--main-bg);
